2002-02-26  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300-protos.h: Add a prototype for
	compute_logical_op_length.
	* config/h8300/h8300.c (compute_logical_op_length): New.
	* config/h8300/h8300.md (anonymous logical patterns): Use
	compute_logical_op_length for length.

2002-02-26  Aldy Hernandez  <aldyh@redhat.com>

        * dwarf2out.c (modified_type_die): Do not call type_main_variant
        for vectors.
        (gen_type_die): Same.

        * attribs.c (handle_vector_size_attribute): Set debug information.

2002-02-26  Daniel Egger  <degger@fhm.edu>

        * config/rs6000/rs6000.md: Swap define_insn attributes to
        fix incorrect generation of merge high instructions instead
        of merge low.

2002-02-26  Aldy Hernandez  <aldyh@redhat.com>

        * c-typeck.c (really_start_incremental_init): Use
        bitsize_zero_node for vectors.

2002-02-26  Aldy Hernandez  <aldyh@redhat.com>

        * config/rs6000/rs6000.md (get_vrsave_internal): Fix typo.
        ("*set_vrsave_internal"): Same.

2002-02-25  Richard Henderson  <rth@redhat.com>

	* expr.c (expand_expr) [MULT_EXPR]: Do not apply distributive law
	in EXPAND_SUM case.  Use host_integerp/tree_low_cst.

2002-02-25  Jakub Jelinek  <jakub@redhat.com>

	PR target/5755
	* config/i386/i386.c (ix86_return_pops_args): Only pop
	fake structure return argument if it was passed on the stack.

2002-02-25  Jason Merrill  <jason@redhat.com>

	* attribs.c (decl_attributes): Also re-layout PARM_DECL and
	RESULT_DECL.

2002-02-25  Alexandre Oliva  <aoliva@redhat.com>

	* gcc.c (init_gcc_specs): Get -shared-libgcc along with -shared to
	link with shared_name only.
	* doc/invoke.texi (Link Options): Document new behavior.

2002-02-25  Aldy Hernandez  <aldyh@redhat.com>

        * c-typeck.c (push_init_level): Handle vectors.

2002-02-25  Alexandre Oliva  <aoliva@redhat.com>

	* config/sparc/sparc.c (const64_high_operand): Zero-extend
	operands of SPARC_SETHI_P.
	(input_operand): Likewise.